fix spacing between navbar and content

--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -35,7 +35,6 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  top: 70px;
 }
 
 .grid-item {
